--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinecone-database/pinecone": "^4.1.0",
     "@prisma/client": "^6.3.1",
     "ai": "^4.1.26",
+    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "openai": "^4.83.0",
