--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@prisma/client": "^6.3.1",
     "ai": "^4.1.26",
     "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "openai": "^4.83.0",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
