--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.9",
     "@clerk/nextjs": "^6.11.1",
     "@clerk/themes": "^2.2.16",
     "@hookform/resolvers": "^3.10.0",
